--- a/wpfFirstHomework/mvopWpfHomework/MainWindow.xaml
+++ b/wpfFirstHomework/mvopWpfHomework/MainWindow.xaml
@@ -34,24 +34,24 @@
         </Grid.RowDefinitions>
         
         <TextBox x:Name="TextBoxName" HorizontalAlignment="Left" Grid.Column ="1" Grid.Row="0" Grid.ColumnSpan="2" TextWrapping="Wrap"
-                 VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding Name, Mode = TwoWay}" LostFocus="TextBoxName_LostFocus"/>
+                 VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding Name, Mode = TwoWay}" LostFocus="TextBoxName_LostFocus" PreviewTextInput="TextBoxName_PreviewTextInput"/>
         <Label x:Name="NameLabel" Content=""  HorizontalAlignment="Left" Grid.Column="3" Grid.Row="0" Height="50" Width="360" Grid.ColumnSpan="2" VerticalAlignment="Center" FontSize="20"/>
         
         <TextBox x:Name="TextBoxSurname" HorizontalAlignment="Left" Grid.Column ="1" Grid.Row="1" Grid.ColumnSpan="2" TextWrapping="Wrap"
-                 VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding Surname, Mode = TwoWay}" LostFocus="TextBoxSurname_LostFocus"/>
+                 VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding Surname, Mode = TwoWay}" LostFocus="TextBoxSurname_LostFocus" PreviewTextInput="TextBoxSurname_PreviewTextInput"/>
         <Label x:Name="SurnameLabel" Content=""  HorizontalAlignment="Left" Grid.Column="3" Grid.Row="1" Height="50" Width="360" Grid.ColumnSpan="2" VerticalAlignment="Center" FontSize="20"/>
 
-        <DatePicker x:Name="DatePicker" HorizontalAlignment="Left" Grid.Column ="1" Grid.Row="2" Grid.ColumnSpan="2" VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding DateOfBirth, Mode = TwoWay}"/>
+        <DatePicker x:Name="DatePicker" HorizontalAlignment="Left" Grid.Column ="1" Grid.Row="2" Grid.ColumnSpan="2" VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding DateOfBirth, Mode = TwoWay}" PreviewTextInput="DatePicker_PreviewTextInput"/>
         
         <TextBox x:Name="TextBoxSalary" HorizontalAlignment="Left" Grid.Column ="1" Grid.Row="3" Grid.ColumnSpan="2" TextWrapping="Wrap"
-                 VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding Salary, Mode = TwoWay}" LostFocus="TextBoxSalary_LostFocus"/>
+                 VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding Salary, Mode = TwoWay}" LostFocus="TextBoxSalary_LostFocus" PreviewTextInput="TextBoxSalary_PreviewTextInput"/>
         <Label x:Name="SalaryLabel" Content=""  HorizontalAlignment="Left" Grid.Column="3" Grid.Row="3" Height="50" Width="360" Grid.ColumnSpan="2" VerticalAlignment="Center" FontSize="20"/>
         
         <TextBox x:Name="TextBoxTitle" HorizontalAlignment="Left" Grid.Column ="1" Grid.Row="4" Grid.ColumnSpan="2" TextWrapping="Wrap"
-                 VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding WorkOccupation, Mode = TwoWay}" LostFocus="TextBoxTitle_LostFocus"/>
+                 VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding WorkOccupation, Mode = TwoWay}" LostFocus="TextBoxTitle_LostFocus" PreviewTextInput="TextBoxTitle_PreviewTextInput"/>
         <Label x:Name="TitleLabel" Content=""  HorizontalAlignment="Left" Grid.Column="3" Grid.Row="4" Height="50" Width="360" Grid.ColumnSpan="2" VerticalAlignment="Center" FontSize="20"/>
 
-        <ComboBox x:Name="CmBoxEdu" HorizontalAlignment="Left" Grid.Column ="1" Grid.Row="5" Grid.ColumnSpan="2" VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding EdDegree, Mode = TwoWay}">
+        <ComboBox x:Name="CmBoxEdu" HorizontalAlignment="Left" Grid.Column ="1" Grid.Row="5" Grid.ColumnSpan="2" VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding EdDegree, Mode = TwoWay}" PreviewTextInput="CmBoxEdu_PreviewTextInput">
             <ComboBoxItem IsSelected="True" Content="No Education"/>
             <ComboBoxItem Content="Elementary school"/>
             <ComboBoxItem Content="High School"/>
