--- a/wpfFirstHomework/mvopWpfHomework/MainWindow.xaml
+++ b/wpfFirstHomework/mvopWpfHomework/MainWindow.xaml
@@ -41,7 +41,9 @@
                  VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding Surname, Mode = TwoWay}" LostFocus="TextBoxSurname_LostFocus" PreviewTextInput="TextBoxSurname_PreviewTextInput"/>
         <Label x:Name="SurnameLabel" Content=""  HorizontalAlignment="Left" Grid.Column="3" Grid.Row="1" Height="50" Width="360" Grid.ColumnSpan="2" VerticalAlignment="Center" FontSize="20"/>
 
-        <DatePicker x:Name="DatePicker" HorizontalAlignment="Left" Grid.Column ="1" Grid.Row="2" Grid.ColumnSpan="2" VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding DateOfBirth, Mode = TwoWay}" PreviewTextInput="DatePicker_PreviewTextInput"/>
+        <DatePicker x:Name="DatePicker" HorizontalAlignment="Left" Grid.Column ="1" Grid.Row="2" Grid.ColumnSpan="2" VerticalAlignment="Center"
+                    Width="360" Height="50" FontSize="28" Text = "{Binding DateOfBirth, Mode = TwoWay}" PreviewTextInput="DatePicker_PreviewTextInput" LostFocus="DatePicker_LostFocus"/>
+        <Label x:Name="DateLabel" Content=""  HorizontalAlignment="Left" Grid.Column="3" Grid.Row="2" Height="50" Width="360" Grid.ColumnSpan="2" VerticalAlignment="Center" FontSize="20"/>
         
         <TextBox x:Name="TextBoxSalary" HorizontalAlignment="Left" Grid.Column ="1" Grid.Row="3" Grid.ColumnSpan="2" TextWrapping="Wrap"
                  VerticalAlignment="Center"  Width="360" Height="50" FontSize="28" Text = "{Binding Salary, Mode = TwoWay}" LostFocus="TextBoxSalary_LostFocus" PreviewTextInput="TextBoxSalary_PreviewTextInput"/>
@@ -82,7 +84,6 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button x:Name="saveButton" Content="Save" Grid.Column="8" Grid.Row="9" Click="ButtonSave_OnClick" FontSize="28"/>
 
     </Grid>
 </Window>
